--- a/ufw-gtk.glade
+++ b/ufw-gtk.glade
@@ -120,6 +120,8 @@
       <column type="gchararray"/>
       <!-- column-name DPorts/App -->
       <column type="gchararray"/>
+      <!-- column-name Position -->
+      <column type="gint"/>
     </columns>
   </object>
   <object class="GtkWindow" id="main_window">
@@ -322,6 +324,7 @@
                 <property name="model">rules_model</property>
                 <property name="headers_clickable">False</property>
                 <property name="search_column">0</property>
+                <signal name="row_activated" handler="on_rules_view_row_activated"/>
                 <child>
                   <object class="GtkTreeViewColumn" id="treeviewcolumn5">
                     <property name="title">#</property>
@@ -1066,7 +1069,6 @@
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
-                <signal name="clicked" handler="on_rule_ok_clicked"/>
               </object>
               <packing>
                 <property name="expand">False</property>
