--- a/ui/ufw-gtk.glade
+++ b/ui/ufw-gtk.glade
@@ -461,7 +461,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkStatusbar" id="statusbar1">
+          <object class="GtkStatusbar" id="statusbar">
             <property name="visible">True</property>
             <property name="spacing">2</property>
           </object>
