--- a/ui/ufw-gtk.glade
+++ b/ui/ufw-gtk.glade
@@ -457,6 +457,7 @@
                   <object class="GtkTreeViewColumn" id="treeviewcolumn5">
                     <property name="resizable">True</property>
                     <property name="title">#</property>
+                    <property name="expand">True</property>
                     <child>
                       <object class="GtkCellRendererText" id="cellrenderertext12"/>
                       <attributes>
@@ -469,6 +470,7 @@
                   <object class="GtkTreeViewColumn" id="treeviewcolumn1">
                     <property name="resizable">True</property>
                     <property name="title">Action</property>
+                    <property name="expand">True</property>
                     <child>
                       <object class="GtkCellRendererText" id="cellrenderertext4"/>
                       <attributes>
@@ -481,6 +483,7 @@
                   <object class="GtkTreeViewColumn" id="treeviewcolumn2">
                     <property name="resizable">True</property>
                     <property name="title">Direction</property>
+                    <property name="expand">True</property>
                     <child>
                       <object class="GtkCellRendererText" id="cellrenderertext5"/>
                       <attributes>
@@ -493,6 +496,7 @@
                   <object class="GtkTreeViewColumn" id="treeviewcolumn3">
                     <property name="resizable">True</property>
                     <property name="title">Protocol</property>
+                    <property name="expand">True</property>
                     <child>
                       <object class="GtkCellRendererText" id="cellrenderertext6"/>
                       <attributes>
@@ -505,6 +509,7 @@
                   <object class="GtkTreeViewColumn" id="treeviewcolumn4">
                     <property name="resizable">True</property>
                     <property name="title">Source</property>
+                    <property name="expand">True</property>
                     <child>
                       <object class="GtkCellRendererText" id="cellrenderertext7"/>
                       <attributes>
@@ -516,7 +521,8 @@
                 <child>
                   <object class="GtkTreeViewColumn" id="treeviewcolumn7">
                     <property name="resizable">True</property>
-                    <property name="title">Ports/App</property>
+                    <property name="title">Port/App</property>
+                    <property name="expand">True</property>
                     <child>
                       <object class="GtkCellRendererText" id="cellrenderertext15"/>
                       <attributes>
@@ -529,6 +535,7 @@
                   <object class="GtkTreeViewColumn" id="treeviewcolumn6">
                     <property name="resizable">True</property>
                     <property name="title">Destination</property>
+                    <property name="expand">True</property>
                     <child>
                       <object class="GtkCellRendererText" id="cellrenderertext9"/>
                       <attributes>
@@ -540,7 +547,8 @@
                 <child>
                   <object class="GtkTreeViewColumn" id="treeviewcolumn8">
                     <property name="resizable">True</property>
-                    <property name="title">Ports/App</property>
+                    <property name="title">Port/App</property>
+                    <property name="expand">True</property>
                     <child>
                       <object class="GtkCellRendererText" id="cellrenderertext16"/>
                       <attributes>
@@ -575,7 +583,10 @@
     <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="window_position">center-on-parent</property>
-    <property name="type_hint">normal</property>
+    <property name="destroy_with_parent">True</property>
+    <property name="type_hint">dialog</property>
+    <property name="skip_taskbar_hint">True</property>
+    <property name="transient_for">main_window</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox1">
@@ -1278,7 +1289,7 @@
             <property name="visible">True</property>
             <property name="layout_style">end</property>
             <child>
-              <object class="GtkButton" id="rule_cancel">
+              <object class="GtkButton" id="button3">
                 <property name="label">gtk-cancel</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -1292,7 +1303,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="rule_ok">
+              <object class="GtkButton" id="button4">
                 <property name="label">gtk-ok</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -1315,8 +1326,8 @@
       </object>
     </child>
     <action-widgets>
-      <action-widget response="0">rule_cancel</action-widget>
-      <action-widget response="1">rule_ok</action-widget>
+      <action-widget response="0">button3</action-widget>
+      <action-widget response="1">button4</action-widget>
     </action-widgets>
   </object>
   <object class="GtkAboutDialog" id="about_dialog">
@@ -1325,8 +1336,9 @@
     <property name="modal">True</property>
     <property name="window_position">center-on-parent</property>
     <property name="destroy_with_parent">True</property>
-    <property name="type_hint">normal</property>
+    <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
+    <property name="transient_for">main_window</property>
     <property name="has_separator">False</property>
     <property name="program_name">UFW-gtk</property>
     <property name="version">0.1.0</property>
@@ -1344,6 +1356,7 @@
 
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.</property>
+    <property name="authors">Darwin M. Bautista</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox2">
         <property name="visible">True</property>
@@ -1371,8 +1384,10 @@
     <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="window_position">center-on-parent</property>
-    <property name="type_hint">normal</property>
-    <property name="has_separator">False</property>
+    <property name="destroy_with_parent">True</property>
+    <property name="type_hint">dialog</property>
+    <property name="skip_taskbar_hint">True</property>
+    <property name="transient_for">main_window</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox3">
         <property name="visible">True</property>
