--- a/ui/ufw-gtk.glade
+++ b/ui/ufw-gtk.glade
@@ -170,7 +170,9 @@
                         <property name="visible">True</property>
                         <property name="related_action">quit</property>
                         <property name="use_action_appearance">True</property>
+                        <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <accelerator key="q" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                     </child>
                   </object>
@@ -198,7 +200,9 @@
                                 <property name="visible">True</property>
                                 <property name="related_action">firewall_toggle</property>
                                 <property name="use_action_appearance">True</property>
+                                <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
+                                <accelerator key="t" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                               </object>
                             </child>
                             <child>
@@ -206,7 +210,9 @@
                                 <property name="visible">True</property>
                                 <property name="related_action">firewall_reload</property>
                                 <property name="use_action_appearance">True</property>
+                                <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
+                                <accelerator key="r" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                               </object>
                             </child>
                             <child>
@@ -219,7 +225,9 @@
                                 <property name="visible">True</property>
                                 <property name="related_action">firewall_update</property>
                                 <property name="use_action_appearance">True</property>
+                                <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
+                                <accelerator key="u" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                               </object>
                             </child>
                             <child>
@@ -227,6 +235,7 @@
                                 <property name="visible">True</property>
                                 <property name="related_action">firewall_reset</property>
                                 <property name="use_action_appearance">True</property>
+                                <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                               </object>
                             </child>
@@ -247,7 +256,9 @@
                                 <property name="visible">True</property>
                                 <property name="related_action">rule_add</property>
                                 <property name="use_action_appearance">True</property>
+                                <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
+                                <accelerator key="i" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                               </object>
                             </child>
                             <child>
@@ -255,7 +266,9 @@
                                 <property name="visible">True</property>
                                 <property name="related_action">rule_edit</property>
                                 <property name="use_action_appearance">True</property>
+                                <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
+                                <accelerator key="e" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                               </object>
                             </child>
                             <child>
@@ -263,7 +276,9 @@
                                 <property name="visible">True</property>
                                 <property name="related_action">rule_delete</property>
                                 <property name="use_action_appearance">True</property>
+                                <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
+                                <accelerator key="Delete" signal="activate"/>
                               </object>
                             </child>
                             <child>
@@ -276,7 +291,9 @@
                                 <property name="visible">True</property>
                                 <property name="related_action">rule_up</property>
                                 <property name="use_action_appearance">True</property>
+                                <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
+                                <accelerator key="Up" signal="activate" modifiers="GDK_SHIFT_MASK"/>
                               </object>
                             </child>
                             <child>
@@ -284,7 +301,9 @@
                                 <property name="visible">True</property>
                                 <property name="related_action">rule_down</property>
                                 <property name="use_action_appearance">True</property>
+                                <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
+                                <accelerator key="Down" signal="activate" modifiers="GDK_SHIFT_MASK"/>
                               </object>
                             </child>
                           </object>
@@ -301,7 +320,9 @@
                         <property name="visible">True</property>
                         <property name="related_action">prefs_dialog_show</property>
                         <property name="use_action_appearance">True</property>
+                        <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <accelerator key="p" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                     </child>
                   </object>
