Add support for specifying the rule position. This can be used for inserting new rules at any valid position or moving exiting rules to other positions.

--- a/ui/ufw-gtk.glade
+++ b/ui/ufw-gtk.glade
@@ -644,6 +644,47 @@
                         <property name="visible">True</property>
                         <property name="spacing">50</property>
                         <child>
+                          <object class="GtkTable" id="table3">
+                            <property name="visible">True</property>
+                            <property name="n_rows">2</property>
+                            <property name="n_columns">2</property>
+                            <property name="column_spacing">10</property>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <object class="GtkLabel" id="label1">
+                                <property name="visible">True</property>
+                                <property name="label" translatable="yes">Position:</property>
+                                <attributes>
+                                  <attribute name="weight" value="bold"/>
+                                </attributes>
+                              </object>
+                            </child>
+                            <child>
+                              <object class="GtkSpinButton" id="position_spin">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="max_length">2</property>
+                                <property name="invisible_char">&#x2022;</property>
+                                <property name="width_chars">4</property>
+                                <property name="adjustment">position_adjustment</property>
+                                <property name="numeric">True</property>
+                              </object>
+                              <packing>
+                                <property name="left_attach">1</property>
+                                <property name="right_attach">2</property>
+                              </packing>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
                           <object class="GtkTable" id="table4">
                             <property name="visible">True</property>
                             <property name="n_rows">2</property>
@@ -738,7 +779,7 @@
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">False</property>
-                            <property name="position">0</property>
+                            <property name="position">1</property>
                           </packing>
                         </child>
                         <child>
@@ -818,7 +859,7 @@
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">False</property>
-                            <property name="position">1</property>
+                            <property name="position">2</property>
                           </packing>
                         </child>
                       </object>
@@ -1663,5 +1704,11 @@
     <property name="label">Import Rules</property>
     <property name="stock_id">gtk-open</property>
     <signal name="activate" handler="on_rules_import_activate"/>
+  </object>
+  <object class="GtkAdjustment" id="position_adjustment">
+    <property name="lower">1</property>
+    <property name="upper">100</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
   </object>
 </interface>
