--- a/ui/ufw-gtk.glade
+++ b/ui/ufw-gtk.glade
@@ -147,16 +147,18 @@
                     <child>
                       <object class="GtkImageMenuItem" id="imagemenuitem1">
                         <property name="visible">True</property>
-                        <property name="use_action_appearance">True</property>
                         <property name="related_action">rules_import</property>
+                        <property name="use_action_appearance">True</property>
+                        <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                       </object>
                     </child>
                     <child>
                       <object class="GtkImageMenuItem" id="imagemenuitem2">
                         <property name="visible">True</property>
-                        <property name="use_action_appearance">True</property>
                         <property name="related_action">rules_export</property>
+                        <property name="use_action_appearance">True</property>
+                        <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                       </object>
                     </child>
@@ -168,8 +170,9 @@
                     <child>
                       <object class="GtkImageMenuItem" id="imagemenuitem3">
                         <property name="visible">True</property>
-                        <property name="use_action_appearance">True</property>
                         <property name="related_action">quit</property>
+                        <property name="use_action_appearance">True</property>
+                        <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <accelerator key="q" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
@@ -197,8 +200,9 @@
                             <child>
                               <object class="GtkImageMenuItem" id="imagemenuitem6">
                                 <property name="visible">True</property>
-                                <property name="use_action_appearance">True</property>
                                 <property name="related_action">firewall_toggle</property>
+                                <property name="use_action_appearance">True</property>
+                                <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                                 <accelerator key="t" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                               </object>
@@ -206,8 +210,9 @@
                             <child>
                               <object class="GtkImageMenuItem" id="imagemenuitem7">
                                 <property name="visible">True</property>
-                                <property name="use_action_appearance">True</property>
                                 <property name="related_action">firewall_reload</property>
+                                <property name="use_action_appearance">True</property>
+                                <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                                 <accelerator key="r" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                               </object>
@@ -220,8 +225,9 @@
                             <child>
                               <object class="GtkImageMenuItem" id="imagemenuitem8">
                                 <property name="visible">True</property>
-                                <property name="use_action_appearance">True</property>
                                 <property name="related_action">firewall_update</property>
+                                <property name="use_action_appearance">True</property>
+                                <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                                 <accelerator key="u" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                               </object>
@@ -229,8 +235,9 @@
                             <child>
                               <object class="GtkImageMenuItem" id="imagemenuitem9">
                                 <property name="visible">True</property>
-                                <property name="use_action_appearance">True</property>
                                 <property name="related_action">firewall_reset</property>
+                                <property name="use_action_appearance">True</property>
+                                <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                               </object>
                             </child>
@@ -249,8 +256,9 @@
                             <child>
                               <object class="GtkImageMenuItem" id="imagemenuitem12">
                                 <property name="visible">True</property>
-                                <property name="use_action_appearance">True</property>
                                 <property name="related_action">rule_add</property>
+                                <property name="use_action_appearance">True</property>
+                                <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                                 <accelerator key="i" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                               </object>
@@ -258,8 +266,9 @@
                             <child>
                               <object class="GtkImageMenuItem" id="imagemenuitem13">
                                 <property name="visible">True</property>
-                                <property name="use_action_appearance">True</property>
                                 <property name="related_action">rule_edit</property>
+                                <property name="use_action_appearance">True</property>
+                                <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                                 <accelerator key="e" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                               </object>
@@ -267,8 +276,9 @@
                             <child>
                               <object class="GtkImageMenuItem" id="imagemenuitem14">
                                 <property name="visible">True</property>
-                                <property name="use_action_appearance">True</property>
                                 <property name="related_action">rule_delete</property>
+                                <property name="use_action_appearance">True</property>
+                                <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                                 <accelerator key="Delete" signal="activate"/>
                               </object>
@@ -281,8 +291,9 @@
                             <child>
                               <object class="GtkImageMenuItem" id="imagemenuitem15">
                                 <property name="visible">True</property>
-                                <property name="use_action_appearance">True</property>
                                 <property name="related_action">rule_up</property>
+                                <property name="use_action_appearance">True</property>
+                                <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                                 <accelerator key="Up" signal="activate" modifiers="GDK_SHIFT_MASK"/>
                               </object>
@@ -290,8 +301,9 @@
                             <child>
                               <object class="GtkImageMenuItem" id="imagemenuitem16">
                                 <property name="visible">True</property>
-                                <property name="use_action_appearance">True</property>
                                 <property name="related_action">rule_down</property>
+                                <property name="use_action_appearance">True</property>
+                                <property name="use_underline">True</property>
                                 <property name="use_stock">True</property>
                                 <accelerator key="Down" signal="activate" modifiers="GDK_SHIFT_MASK"/>
                               </object>
@@ -308,8 +320,9 @@
                     <child>
                       <object class="GtkImageMenuItem" id="imagemenuitem11">
                         <property name="visible">True</property>
-                        <property name="use_action_appearance">True</property>
                         <property name="related_action">prefs_dialog_show</property>
+                        <property name="use_action_appearance">True</property>
+                        <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <accelerator key="p" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
@@ -329,8 +342,9 @@
                     <child>
                       <object class="GtkImageMenuItem" id="imagemenuitem10">
                         <property name="visible">True</property>
-                        <property name="use_action_appearance">True</property>
                         <property name="related_action">about_dialog_show</property>
+                        <property name="use_action_appearance">True</property>
+                        <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                       </object>
                     </child>
@@ -650,12 +664,6 @@
                             <property name="n_columns">2</property>
                             <property name="column_spacing">10</property>
                             <child>
-                              <placeholder/>
-                            </child>
-                            <child>
-                              <placeholder/>
-                            </child>
-                            <child>
                               <object class="GtkLabel" id="label1">
                                 <property name="visible">True</property>
                                 <property name="label" translatable="yes">Position:</property>
@@ -678,6 +686,12 @@
                                 <property name="left_attach">1</property>
                                 <property name="right_attach">2</property>
                               </packing>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
                             </child>
                           </object>
                           <packing>
@@ -975,12 +989,6 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
                                       <object class="GtkButton" id="src_addr_custom_clear">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
@@ -996,6 +1004,12 @@
                                         <property name="x_options">GTK_SHRINK</property>
                                         <property name="y_options">GTK_SHRINK</property>
                                       </packing>
+                                    </child>
+                                    <child>
+                                      <placeholder/>
+                                    </child>
+                                    <child>
+                                      <placeholder/>
                                     </child>
                                   </object>
                                 </child>
@@ -1107,15 +1121,6 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
                                       <object class="GtkButton" id="src_port_custom_clear">
                                         <property name="visible">True</property>
                                         <property name="sensitive">False</property>
@@ -1132,6 +1137,15 @@
                                         <property name="x_options">GTK_SHRINK</property>
                                         <property name="y_options">GTK_SHRINK</property>
                                       </packing>
+                                    </child>
+                                    <child>
+                                      <placeholder/>
+                                    </child>
+                                    <child>
+                                      <placeholder/>
+                                    </child>
+                                    <child>
+                                      <placeholder/>
                                     </child>
                                   </object>
                                 </child>
@@ -1241,12 +1255,6 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
                                       <object class="GtkButton" id="dst_addr_custom_clear">
                                         <property name="visible">True</property>
                                         <property name="sensitive">False</property>
@@ -1263,6 +1271,12 @@
                                         <property name="x_options">GTK_SHRINK</property>
                                         <property name="y_options">GTK_SHRINK</property>
                                       </packing>
+                                    </child>
+                                    <child>
+                                      <placeholder/>
+                                    </child>
+                                    <child>
+                                      <placeholder/>
                                     </child>
                                   </object>
                                 </child>
@@ -1372,15 +1386,6 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
                                       <object class="GtkButton" id="dst_port_custom_clear">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
@@ -1396,6 +1401,15 @@
                                         <property name="x_options">GTK_SHRINK</property>
                                         <property name="y_options">GTK_SHRINK</property>
                                       </packing>
+                                    </child>
+                                    <child>
+                                      <placeholder/>
+                                    </child>
+                                    <child>
+                                      <placeholder/>
+                                    </child>
+                                    <child>
+                                      <placeholder/>
                                     </child>
                                   </object>
                                 </child>
@@ -1493,10 +1507,11 @@
     <property name="skip_taskbar_hint">True</property>
     <property name="transient_for">main_window</property>
     <property name="has_separator">False</property>
-    <property name="program_name">UFW-gtk</property>
+    <property name="program_name">ufw-gtk</property>
     <property name="version">0.1.0</property>
     <property name="copyright" translatable="yes">Copyright &#xA9; 2010 Darwin M. Bautista</property>
     <property name="comments" translatable="yes">GTK+ frontend for UFW</property>
+    <property name="website">http://code.google.com/p/ufw-frontends/</property>
     <property name="license" translatable="yes">This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
@@ -1509,7 +1524,7 @@
 
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.</property>
-    <property name="authors">Darwin M. Bautista</property>
+    <property name="authors">Darwin M. Bautista &lt;djclue917@gmail.com&gt;</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox2">
         <property name="visible">True</property>
